--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ai": "^2.2.31",
+    "aws-sdk": "^2.1536.0",
+    "axios": "^1.6.5",
+    "dotenv": "^16.3.1",
+    "html-react-parser": "^5.1.1",
+    "micro": "^10.0.1",
+    "next": "14.0.4",
+    "npm": "^10.3.0",
+    "openai": "^4.24.7",
+    "openai-edge": "^1.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
