--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "ai": "^2.2.31",
     "aws-sdk": "^2.1536.0",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
+    "commonmark": "^0.31.0",
     "dotenv": "^16.3.1",
     "html-react-parser": "^5.1.1",
     "micro": "^10.0.1",
     "next": "14.0.4",
     "npm": "^10.3.0",
-    "openai": "^4.24.7",
+    "openai": "^4.27.0",
     "openai-edge": "^1.2.2",
     "react": "^18",
     "react-dom": "^18",
